[metadata]
name = knovleks
version = 0.0.1
author = Loris Reiff
author_email = loris.reiff@liblor.ch
license = Apache 2.0

[options]
packages = find:
install_requires =
    PyMuPDF==1.19.6
    newspaper3k==0.2.8
    click==8.1.3

[options.entry_points]
console_scripts =
    knovleks = knovleks.__main__:cli

[pycodestyle]
ignore = E701

[flake8]
ignore = E701
exclude = tests/context.py
statistics = true
show-source = true
