[metadata]
name = knovleks
version = 0.0.3
author = Loris Reiff
author_email = loris.reiff@liblor.ch
license = Apache 2.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    PyMuPDF==1.20.2
    newspaper3k==0.2.8
    click==8.1.3
    textual==0.1.18
    textual-inputs==0.2.6

[options.entry_points]
console_scripts =
    knovleks = knovleks.__main__:cli

[pycodestyle]
ignore = E701,E731

[flake8]
ignore = E701,E731
per-file-ignores = __init__.py:F401
exclude = tests/context.py
statistics = true
show-source = true
